fix ooverflow

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -40,4 +40,8 @@
     left: 50% !important;
     transform: translate(-50%, 0);
   }
+
+  .sc-item.collapsed .item-name {
+    width: 240px !important;
+  }
 }
